# SlugEngineVk-1.0

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Engine.cpp  Engine.hpp  FeaturesExtensions.cpp  FeaturesExtensions.hpp  README.md  TODO.md  TO_READ.md  VulkanErrors.hpp  Window.cpp  Window.hpp  erect  gdb  layout.cpp  main.cpp  makefile
common/: .clang-format  Allocator.cpp  Allocator.hpp  Array.cpp  Array.hpp  Camera.cpp  Camera.hpp  Clock.cpp  Clock.hpp  File.cpp  File.hpp  Image.cpp  Image.hpp  Parser.cpp  Parser.hpp  QuartCamera.cpp  QuartCamera.hpp  Spirv.cpp  Spirv.hpp  SpirvParser.cpp  SpvParser2.hpp  String.cpp  String.hpp  Vec.hpp  VulkanErrors.hpp  Window.cpp  glTF.cpp  old_Spv.hpp
shaders/: compile  dis  triangle1.frag  triangle1.vert  triangle2.frag  triangle2.vert  triangle2.vert.spv  triangle3.vert  triangle3.vert.spv  triangle4.frag  triangle4.frag.spv  triangle4.vert  triangle4.vert.spv  wc
